Fixed page transition footer jump

--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,6 @@ p {
 }
 
 .transition-item {
-  position: absolute;
-  left: 0;
-  right: 0;
 }
 
 .transition-leave.transition-leave-active {
@@ -44,6 +41,10 @@ p {
 .transition-leave {
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 86px;
 }
 
 .transition-appear.transition-appear-active {
